--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure.Authentication/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure.Authentication/project.json
@@ -3,14 +3,20 @@
   "title": "Authentication for Azure Management Clients",
   "description": "Provides ADAL based authentication for Azure management client libraries \nSupported Platforms:\n  -   Portable Class Libraries\n  -   .NET Framework 4.5\n  -   Windows 8\n  -   Windows Phone 8.1\n  -   DotNet Core",
   "authors": [ "Microsoft" ],
-  "tags": [ "Microsoft AutoRest ClientRuntime REST adal" ],
-  "projectUrl": "https://github.com/Azure/AutoRest",
-  "licenseUrl": "https://raw.githubusercontent.com/Microsoft/dotnet/master/LICENSE",
   "copyright": "Copyright (c) Microsoft Corporation",
-  "requireLicenseAcceptance": true,
 
-  "compilationOptions": {
+  "packOptions": {
+    "summary": "Client infrastructure for Azure client library ADAL based authentication.",
+    "iconUrl": "http://go.microsoft.com/fwlink/?LinkID=288890",
+    "projectUrl": "https://github.com/Azure/AutoRest",
+    "licenseUrl": "https://raw.githubusercontent.com/Microsoft/dotnet/master/LICENSE",
+    "tags": [ "Microsoft AutoRest ClientRuntime REST adal" ],
+    "requireLicenseAcceptance":  true,
+  },
+
+  "buildOptions": {
     "delaySign": true,
+    "publicSign": false,
     "keyFile": "../../../Tools/MSSharedLibKey.snk"
   },
 
@@ -25,14 +31,14 @@
       }
     },    
     "netstandard1.1": {
-      "compilationOptions": { "define": [ "PORTABLE" ] },
+      "buildOptions": { "define": [ "PORTABLE" ] },
       "imports": ["dnxcore50", "portable-net45+win8"],
       "dependencies": {
         "Microsoft.IdentityModel.Clients.ActiveDirectory": "3.6.212041202-alpha"
       }
     },
     "netstandard1.5": {
-      "compilationOptions": { "define": [ "PORTABLE" ] },
+      "buildOptions": { "define": [ "PORTABLE" ] },
       "imports": ["dnxcore50"],
       "dependencies": {
         "Microsoft.IdentityModel.Clients.ActiveDirectory": "3.6.212041202-alpha"
