--- a/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure/project.json
+++ b/ClientRuntimes/CSharp/Microsoft.Rest.ClientRuntime.Azure/project.json
@@ -1,18 +1,22 @@
 {
   "version": "4.1.0",
   "copyright": "Copyright (c) Microsoft Corporation",
-  "iconUrl": "http://go.microsoft.com/fwlink/?LinkID=288890",
   "title": "Client Runtime for Microsoft Azure Libraries",
-  "summary": "Client infrastructure for Azure client libraries.",
   "description": "Provides common error handling, tracing, and HTTP/REST-based pipeline manipulation. \nSupported Platforms:\n  -   Portable Class Libraries\n  -   .NET Framework 4.5\n  -   Windows 8\n  -   Windows Phone 8.1\n  -   DotNet Core",
   "authors": [ "Microsoft" ],
-  "tags": [ "Microsoft Azure AutoRest ClientRuntime REST azureofficial" ],
-  "projectUrl": "https://github.com/Azure/AutoRest",
-  "licenseUrl": "https://raw.githubusercontent.com/Microsoft/dotnet/master/LICENSE",
-  "requireLicenseAcceptance":  true,
 
-  "compilationOptions": {
+  "packOptions": {
+    "summary": "Client infrastructure for Azure client libraries.",
+    "iconUrl": "http://go.microsoft.com/fwlink/?LinkID=288890",
+    "projectUrl": "https://github.com/Azure/AutoRest",
+    "licenseUrl": "https://raw.githubusercontent.com/Microsoft/dotnet/master/LICENSE",
+    "tags": [ "Microsoft Azure AutoRest ClientRuntime REST azureofficial" ],
+    "requireLicenseAcceptance":  true,
+  },
+
+  "buildOptions": {
     "delaySign": true,
+    "publicSign": false,
     "keyFile": "../../../Tools/MSSharedLibKey.snk"
   },
 
@@ -28,7 +32,7 @@
       }
     },
     "netstandard1.1": {
-      "compilationOptions": { "define": [ "PORTABLE" ] },
+      "buildOptions": { "define": [ "PORTABLE" ] },
       "imports": ["dnxcore50", "portable-net45+win8"],
       "dependencies": {
         "Microsoft.NETCore.Platforms": "1.0.1-rc2-24027",
@@ -65,7 +69,7 @@
       }
     },
     "netstandard1.5": {
-      "compilationOptions": { "define": [ "PORTABLE" ] },
+      "buildOptions": { "define": [ "PORTABLE" ] },
       "imports": ["dnxcore50"],
       "dependencies": {
         "Microsoft.NETCore.Platforms": "1.0.1-rc2-24027",
