--- a/AutoRest/Generators/AzureResourceSchema/AzureResourceSchema.Tests/AutoRest.Generator.AzureResourceSchema.Tests.csproj
+++ b/AutoRest/Generators/AzureResourceSchema/AzureResourceSchema.Tests/AutoRest.Generator.AzureResourceSchema.Tests.csproj
@@ -78,55 +78,61 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Expected\Storage\Microsoft.Storage.json">
+    <Content Include="Expected\Storage\2016-01-01\Microsoft.Storage.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Expected\Batch\Microsoft.Batch.json">
+    <Content Include="Expected\Batch\2015-12-01\Microsoft.Batch.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Expected\CDN\Microsoft.Cdn.json">
+    <Content Include="Expected\CDN\2016-04-02\Microsoft.Cdn.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Expected\Compute\Microsoft.Compute.json">
+    <Content Include="Expected\Compute\2016-03-30\Microsoft.Compute.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Expected\Network\Microsoft.Network.json">
+    <Content Include="Expected\Network\2016-03-30\Microsoft.Network.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Expected\Web\Microsoft.Web.json">
+    <Content Include="Expected\Web\2015-08-01\Microsoft.Web.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Expected\Web\Microsoft.DomainRegistration.json">
+    <Content Include="Expected\Web\2015-08-01\Microsoft.DomainRegistration.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Expected\Web\Microsoft.CertificateRegistration.json">
+    <Content Include="Expected\Web\2015-08-01\Microsoft.CertificateRegistration.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Expected\DNS\Microsoft.Network.json">
+    <Content Include="Expected\DNS\2016-04-01\Microsoft.Network.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Expected\DNS\2015-05-04-preview\Microsoft.Network.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <Content Include="Swagger\storage.json">
+    <Content Include="Swagger\Storage\2016-01-01\storage.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Swagger\BatchManagement.json">
+    <Content Include="Swagger\Batch\2015-12-01\BatchManagement.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Swagger\cdn.json">
+    <Content Include="Swagger\CDN\2016-04-02\cdn.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Swagger\compute.json">
+    <Content Include="Swagger\Compute\2016-03-30\compute.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Swagger\network.json">
+    <Content Include="Swagger\Network\2016-03-30\network.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Swagger\web.json">
+    <Content Include="Swagger\Web\2015-08-01\web.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Swagger\dns.json">
+    <Content Include="Swagger\DNS\2016-04-01\dns.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Swagger\DNS\2015-05-04-preview\dns.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
